Initial award data upload, static text info added
- Uploaded pre-process and self-categorized award data pulled from
  Wikipedia
  - Added static textual information (aid storytelling) about number of
    nominated vs won awards and notable national recognition,
    specifically philanthropic
  - Updated style sheet with class-specific seperation and special font
    for numeric text

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*---------- General customization ----------*/
 html{
     scroll-behavior: smooth;
 
@@ -28,6 +29,8 @@ body{
     height: 200px;
 
 }
+
+/*---------- Country Bubble customization ----------*/
 
 .bubble-vis .artist-circle {
     fill: lightcyan;
@@ -72,4 +75,10 @@ body{
 
 .date-marker {
     stroke-width: 1px;
+}
+
+/*---------- Awards customization ----------*/
+.numeric{
+    font-family: 'Courier New', Courier, monospace;
+
 }
