Missing </div> from Mod2, fixed footer

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html{
 
 }
 
-body{
+.module{
     /* Overall backing to the page and heading */
     background-color: black;
 
@@ -37,7 +37,6 @@ body{
 #footer{
     /* Light grey with generous fluid space at the bottom of the page to cite / include our contacts */
     background-color: #d3d3d3;
-    height: 200px;
 
 }
 
