--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@
 }
 
 #text-cover{
-    font-family: googleTanBold;
+    font-family: googleJuliasSans;
     color: #FFFFFF;
     opacity: 60%;
     font-size: 1500%;
