Added big placeholder cards, ending image
- Fixed the missing source and team titles in the footer
- Added an image of dolly in a new complementary div for us to wrap up
  the story
- Added other big placeholder cards for text (quotes or extant text) to
  be put
- Lowered awards transition from 800 to 700 for smoother movement

--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,11 @@ html{
 
 }
 
+.dark-title{
+    font-family: googleJuliasSans;
+    color: black;
+}
+
 .gutter{
     /* Allows us to make custom row-breaks so svgs are not directly touching */
     background-color: black;
@@ -49,10 +54,20 @@ html{
 
 }
 
-#readandwrite{
+.quote-mod{
     text-align: center;
     padding: 20% 0;
     background-color: #2b3339;
+}
+
+.quote-mod2{
+    text-align: center;
+    padding: 20% 0;
+    background-color: #1a1b1b;
+}
+
+#outsource2{
+    padding: 5% 0;
 }
 
 #footer{
