--- a/css/style.css
+++ b/css/style.css
@@ -54,21 +54,34 @@
 }
 
 /*----------Video -------------------------*/
+.cover {
+    width: 90vw;
+    height: 110vh;
+    position:fixed;
+    /*display:inline-block;*/
+    fill: none;
+}
+
 .vidContain {
-    width: 100%;
+    width: 90vw;
     height: 100%;
     position:relative;
     /*display:inline-block;*/
-    margin:10px;
+    margin-top:3vh;
+    fill: none;
 }
 .vid {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 95vw;
-    height: 90vh;
-    transform: translate(-50%, -50%);
-    pointer-events: none;
+    min-width: 120%;
+    min-height: 100%;
+    width: auto;
+    height: auto
+    z-index:-1;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background-size: cover;
 }
 
 @media (min-aspect-ratio: 16/9) {
@@ -90,6 +103,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+
 }
 
 @font-face {
@@ -117,7 +131,8 @@
     font-family: googleJuliasSans;
     color: #FFFFFF;
     opacity: 60%;
-    font-size: 1500%;
+    font-size: 1200%;
+    font-weight: bold;
 }
 
 /*---------- Charity customization ----------*/
