--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,16 @@ body{
     background-color: #263143;
 }
 
+#module-3{
+    padding-left: 1%;
+    padding-right: 1%;
+
+}
+
+#vis-3-title{
+    justify-content: center;
+}
+
 #collab_intro{
     background-color: #1E222B;
     padding-top: 12%;
@@ -101,10 +111,11 @@ body{
 }
 
 #vis-1c-title{
-    background-color: #black;
+    background-color: black;
     padding-top: 6%;
     text-align: center;
 }
+
 #charity_intro{
     background-color: #1E222B;
     padding-top: 12%;
@@ -176,7 +187,7 @@ body{
 
 
 .vis-title{
-    font-family: googleJuliasSans;
+    font-family: googleLato;
     color: #ffffff;
 
 }
@@ -220,7 +231,7 @@ body{
 
 #spotifystats{
     text-align: center;
-    padding: 2% 3%;
+    padding: 4% 3%;
     background-color: #2b3339;
 }
 
