--- a/css/index.css
+++ b/css/index.css
@@ -121,6 +121,14 @@ body{
     font-size: xxx-large;
 }
 
+.timeawardsmerge{
+    background-color: #1D2436;
+    padding-top: 12%;
+    padding-bottom: 12%;
+    color: #f6d17b;
+    font-size: xx-large;
+}
+
 #vis-1c-title{
     background-color: black;
     padding-top: 6%;
@@ -141,9 +149,11 @@ body{
     background-color: #1D2436;
 }
 
+
 .library {
     color: #E2D0BC
 }
+
 #vis-1f-title{
     padding-top: 3%;
     color: #B99599;
@@ -245,7 +255,9 @@ body{
 
 #spotifystats{
     text-align: center;
-    padding: 4% 3%;
+    padding-left: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     background-color: #2b3339;
 }
 
