--- a/css/index.css
+++ b/css/index.css
@@ -248,26 +248,26 @@ body{
 .gutter{
     /* Allows us to make custom row-breaks so svgs are not directly touching */
     /*background-color: black;*/
-    padding-bottom: 4%;
+    padding-bottom: 4vh;
 
 }
 
 .gutter-light{
     background-color: #ffffff;
-    padding-bottom: 4%;
+    padding-bottom: 4vh;
 
 }
 
 .big-gutter{
     /* Allows us to make custom row-breaks that are larger than the small visual separation between visualizations */
     /*background-color: black; */
-    padding-bottom: 12%;
+    padding-bottom: 12vh;
 
 }
 
 .big-gutter-light{
     background-color: #ffffff;
-    padding-bottom: 12%;
+    padding-bottom: 12vh;
 
 }
 
