--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     fill: #BEA1A5;
 }
 
-.bubble-vis .artist-circle-tooltip:hover {
+.bubble-vis .artist-circle-tooltip-hover:hover {
     filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
     stroke:#89414D;
     stroke-width: 8px;
