--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,7 @@
     top: 0;
     left: 0.5em;
     height: 100vh;
+    pointer-events: none;
 }
 
 .left-menu .bgbox {
@@ -279,6 +280,7 @@
     text-decoration: none;
     line-height: 2rem;
     color: #f6d17b;
+    pointer-events: auto;
 }
 
 .left-menu .bullet {
